[package]
name = "woflos"
version = "0.4.0"
edition = "2021"
authors = ["wofl <wofl@woflos.dev>"]
description = "A capability-based microkernel OS on RISC-V"

[dependencies]
blake3 = { version = "1", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # Optimize for size - resource efficiency!